test/data/resolver/valid/union_matched_columns.cypher
MATCH (a:Person) RETURN a.name AS nm UNION MATCH (c:Company) RETURN c.name AS nm
