test/data/resolver/invalid/union_column_nullability_mismatch.cypher
MATCH (a:Person) RETURN a.name AS x UNION MATCH (a:Person) RETURN a.nickname AS x
